@@ -1,9 +1,10 @@
 package net.sinsengumi.feedich.service;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.io.InputStreamReader;
+import java.io.StringReader;
+import java.net.HttpURLConnection;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.List;
@@ -21,13 +22,13 @@ import com.rometools.rome.io.XmlReader;
 
 import lombok.extern.slf4j.Slf4j;
 import net.sinsengumi.feedich.exception.ApplicationException;
-import net.sinsengumi.feedich.model.Feed;
+import net.sinsengumi.feedich.util.HttpUtil;
 
 @Slf4j
 @Service
 public class FeedDiscoverer {
 
-    public List<Feed> discover(String url) {
+    public List<SyndFeed> discover(String url) {
         // 直接 feedUrl が指定された場合
         try {
             return Arrays.asList(parseFeed(url));
@@ -40,7 +41,7 @@ public class FeedDiscoverer {
             Elements feedLinks = document.select("link[type~=rss|atom]");
             return feedLinks.stream().map(f -> {
                 try {
-                    String feedUrl = resolveUrl(url, f.attr("href"));
+                    String feedUrl = HttpUtil.resolveUrl(url, f.attr("href"));
                     return parseFeed(feedUrl);
                 } catch (Exception e) {
                     e.printStackTrace();
@@ -54,44 +55,53 @@ public class FeedDiscoverer {
         }
     }
 
-    public Feed parseFeed(String feedUrl) {
+    public SyndFeed parseFeed(String feedUrl) {
+        SyndFeedInput input = new SyndFeedInput();
+        SyndFeed syndFeed = null;
         try {
-            SyndFeedInput input = new SyndFeedInput();
-            SyndFeed syndFeed = input.build(new XmlReader(new URL(feedUrl)));
-            Feed feed = new Feed();
-            feed.setTitle(syndFeed.getTitle());
-            feed.setDescription(syndFeed.getDescription());
-            feed.setUrl(syndFeed.getLink());
-            feed.setFeedUrl(feedUrl);
-            feed.setFeedType(syndFeed.getFeedType());
-            if (syndFeed.getIcon() != null) {
-                feed.setIcon(syndFeed.getIcon().getUrl());
+            syndFeed = input.build(new XmlReader(new URL(feedUrl)));
+        } catch (FeedException e) {
+            // リダイレクトを疑う
+            log.info("Try redirect url... {}", feedUrl);
+            feedUrl = HttpUtil.getFinalUrl(feedUrl);
+            try {
+                syndFeed = input.build(new XmlReader(new URL(feedUrl)));
+            } catch (FeedException e1) {
+                // Unicode を疑う
+                log.info("Try Unicode in CDATA... {}", feedUrl);
+                try {
+                    syndFeed = input.build(getTrimmedUnicodeXML(feedUrl));
+                } catch (IllegalArgumentException | FeedException | IOException e2) {
+                    throw new ApplicationException(e2);
+                }
+            } catch (IllegalArgumentException | IOException e1) {
+                throw new ApplicationException(e1);
             }
-            return feed;
-        } catch (IllegalArgumentException | FeedException | IOException e) {
+        } catch (IllegalArgumentException | IOException e) {
             throw new ApplicationException(e);
         }
+
+        return syndFeed;
     }
 
-    private String resolveUrl(String accessUrl, String relativeOrAbsolutePath) {
-        try {
-            URL url = new URL(accessUrl);
-            String path = url.getPath();
-            String baseUrl = url.getProtocol() + "://" + url.getHost() + "/";
-            String accessUrlBase = baseUrl + path.substring(0, path.lastIndexOf("/") + 1);
-
-            if (relativeOrAbsolutePath.matches("^https?://.*")) {
-                // URL
-                return relativeOrAbsolutePath;
-            } else if (relativeOrAbsolutePath.startsWith("/")) {
-                // 絶対パス
-                return new URI(baseUrl + relativeOrAbsolutePath).normalize().toString();
-            } else {
-                // 相対パス
-                return new URI(accessUrlBase + relativeOrAbsolutePath).normalize().toString();
+    private StringReader getTrimmedUnicodeXML(String rss) throws IOException {
+        URL url = new URL(rss);
+        HttpURLConnection urlconn = (HttpURLConnection) url.openConnection();
+        urlconn.setRequestProperty("Accept-Charset", "UTF-8");
+        urlconn.connect();
+        BufferedReader reader = new BufferedReader(new InputStreamReader(urlconn.getInputStream(), "UTF-8"));
+        String xml = "";
+        while (true) {
+            String line = reader.readLine();
+            if (line == null) {
+                break;
             }
-        } catch (MalformedURLException | URISyntaxException e) {
-            throw new ApplicationException(e);
+            xml += line;
         }
+        reader.close();
+        urlconn.disconnect();
+        xml = xml.replaceAll("[\\00-\\x08\\x0a-\\x1f\\x7f]", "");
+        StringReader sreader = new StringReader(xml);
+        return sreader;
     }
 }
